--- a/pickle-ui/tsconfig.json
+++ b/pickle-ui/tsconfig.json
@@ -19,7 +19,8 @@
     "module": "ES2022",
     "baseUrl": "src",
     "paths": {
-      "@services": ["app/services/index.ts"]
+      "@services": ["app/services/index.ts"],
+      "@models": ["app/models/index.ts"]
     }
   },
   "angularCompilerOptions": {
