--- a/pickle-ui/package.json
+++ b/pickle-ui/package.json
@@ -46,5 +46,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "standalone": false
+    }
   }
 }
