--- a/pickle-ui/package.json
+++ b/pickle-ui/package.json
@@ -28,6 +28,7 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "express": "^4.18.2",
     "firebase": "^11.8.1",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
