--- a/pickle-ui/angular.json
+++ b/pickle-ui/angular.json
@@ -32,7 +32,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
