--- a/pickle-ui/package.json
+++ b/pickle-ui/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "firebase": "^11.8.1",
     "moment": "^2.30.1",
+    "ng-recaptcha-2": "^15.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
