--- a/pickle-ui/package.json
+++ b/pickle-ui/package.json
@@ -33,6 +33,7 @@
     "firebase": "^11.8.1",
     "moment": "^2.30.1",
     "ng-recaptcha-2": "^15.0.3",
+    "ngx-mat-timepicker": "^19.0.0",
     "ngx-skeleton-loader": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
