--- a/pickle-ui/tsconfig.json
+++ b/pickle-ui/tsconfig.json
@@ -20,7 +20,8 @@
     "baseUrl": "src",
     "paths": {
       "@services": ["app/services/index.ts"],
-      "@models": ["app/models/index.ts"]
+      "@models": ["app/models/index.ts"],
+      "@components": ["app/components/index.ts"]
     }
   },
   "angularCompilerOptions": {
